--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -14,8 +14,11 @@
 
 .s-wrapper video{
   position: fixed;
-  width: 100%;
-
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto; /* Garantir que o vídeo ocupe toda a tela */
+  object-fit: cover; /* Manter a proporção sem distorcer */
 }
 
 .s-wrapper .s-left-column {
@@ -97,4 +100,46 @@
 .s-spiderman-01-03 {
   background-image: url('../images/spiderman-tobey/movie-03/background.png');
   background-size: cover;
+}
+
+@media (max-width: 1366px) and (max-height: 768px) {
+  .s-wrapper {
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+  }
+
+  .s-wrapper .s-main-content {
+    padding-left: 0;
+    margin-left: 120px;
+    justify-content: flex-start; /* Garante que o conteúdo esteja próximo ao topo */
+  }
+
+  .s-wrapper .s-main-content__top {
+    margin-top: -25px; /* Removendo qualquer margem superior que pudesse estar causando o afastamento */
+    flex: 1;
+    padding-top: 10px; /* Espaço pequeno no topo */
+  }
+
+  .s-wrapper .s-main-content__bottom {
+    height: auto;
+    margin-top: -80px;
+  }
+
+  .s-wrapper .s-main-content .s-logo img {
+    width: 60%;
+    margin-top: 0px;
+    margin-bottom: -10px;
+  }
+
+  .s-wrapper .s-main-content__top .s-description {
+    max-width: 85%;
+    padding: 15px;
+    font-size: 14px;
+  }
+
+  .s-wrapper video {
+    height: auto;
+    object-fit: contain;
+  }
 }
