--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -5,13 +5,10 @@
 @import url('components/_link-button.css');
 @import url('components/_gallery.css');
 
-html, body {
-  /* overflow-y: hidden!important; */
-}
 
 .s-wrapper {
   display: flex;
-  height: 100vh;  
+  min-height: 100vh;  
   flex-flow: row nowrap; 
   background-color: aqua; 
 }
@@ -57,22 +54,22 @@ html, body {
   height: 80vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
 }
 
 .s-wrapper .s-main-content__top {
-  margin-bottom: auto; /* Garante que .top cresça naturalmente sem sobreposição */
+  margin-bottom: 50px; /* Garante que .top cresça naturalmente sem sobreposição */
 }
 
 .s-wrapper .s-main-content__bottom{
-  height: 20vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
 }
 
 .s-wrapper .s-main-content .s-logo img{
-  margin-top: 50px;
+  margin-top: 30px;
   margin-left: 0;
   margin-bottom: 30px;
 }
@@ -134,12 +131,14 @@ html, body {
     margin-left: 120px;
     width: auto;
     justify-content: flex-start; /* Garante que o conteúdo esteja próximo ao topo */
+    
   }
 
   .s-wrapper .s-main-content__top {
     /* margin-top: -25px; Removendo qualquer margem superior que pudesse estar causando o afastamento */
     flex: 1;
     padding-top: 10px; /* Espaço pequeno no topo */
+    margin-bottom: 35px;
   }
 
   .s-wrapper .s-main-content__bottom {
@@ -151,7 +150,7 @@ html, body {
   .s-wrapper .s-main-content .s-logo img {
     width: 60%;
     margin-top: 0px;
-    margin-bottom: -10px;
+    margin-bottom: auto;
   }
 
   .s-wrapper .s-main-content__top .s-description {
